--- a/epoblog/package.json
+++ b/epoblog/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy":"sh deploy.ps1"
+    "deploy": "@powershell -NoProfile -Command ./deploy.ps1"
   },
   "dependencies": {
     "core-js": "^3.6.5",
