--- a/epoblog/package.json
+++ b/epoblog/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "markdown-it-mermaid": "^0.2.5",
+    "markdown-it-vue": "^1.1.6",
+    "vue": "^3.0.0",
+    "vue3-markdown-it": "^1.0.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
